scripts/nullaway/nullgtn/url65a69497a4_sweider_BankSystem_JavaLab8_tgz-pJ8-banksystem_lab4_LauncherJ8.txt
../nullgtn/url65a69497a4_sweider_BankSystem_JavaLab8_tgz-pJ8-banksystem_lab4_LauncherJ8/src/banksystem/lab4/core/broker/CheckableAccount.java:36: error: [NullAway] parameter moneyToDeposite is @NonNull, but parameter in superclass method banksystem.lab4.core.account.ITransactionAccess.deposite(banksystem.lab4.core.moneyamount.MoneyAmount) is @Nullable
    public void deposite(MoneyAmount moneyToDeposite) {
                                     ^
    (see http://t.uber.com/nullaway )
../nullgtn/url65a69497a4_sweider_BankSystem_JavaLab8_tgz-pJ8-banksystem_lab4_LauncherJ8/src/banksystem/lab4/core/broker/CheckableAccount.java:41: error: [NullAway] parameter moneyToWithdraw is @NonNull, but parameter in superclass method banksystem.lab4.core.account.ITransactionAccess.withdraw(banksystem.lab4.core.moneyamount.MoneyAmount) is @Nullable
    public void withdraw(MoneyAmount moneyToWithdraw) {
                                     ^
    (see http://t.uber.com/nullaway )
../nullgtn/url65a69497a4_sweider_BankSystem_JavaLab8_tgz-pJ8-banksystem_lab4_LauncherJ8/src/banksystem/lab4/core/broker/Broker.java:34: error: [NullAway] parameter transaction is @NonNull, but parameter in superclass method banksystem.lab4.core.broker.IBroker.execute(banksystem.lab4.core.transaction.Transaction) is @Nullable
    public synchronized boolean execute(Transaction transaction) {
                                                    ^
    (see http://t.uber.com/nullaway )
../nullgtn/url65a69497a4_sweider_BankSystem_JavaLab8_tgz-pJ8-banksystem_lab4_LauncherJ8/src/banksystem/lab4/core/broker/Broker.java:48: error: [NullAway] parameter accountId is @NonNull, but parameter in superclass method banksystem.lab4.core.broker.IBroker.getAmountAndSetChecked(int) is @Nullable
    public synchronized MoneyAmount getAmountAndSetChecked(int accountId) {
                                                               ^
    (see http://t.uber.com/nullaway )
../nullgtn/url65a69497a4_sweider_BankSystem_JavaLab8_tgz-pJ8-banksystem_lab4_LauncherJ8/src/banksystem/lab4/core/broker/Broker.java:50: error: [NullAway] dereferenced expression workingAccount is @Nullable
        workingAccount.setState(CheckableAccount.AccountState.CHECKED);
                      ^
    (see http://t.uber.com/nullaway )
../nullgtn/url65a69497a4_sweider_BankSystem_JavaLab8_tgz-pJ8-banksystem_lab4_LauncherJ8/src/banksystem/lab4/core/broker/Broker.java:56: error: [NullAway] dereferenced expression this.accounts.get(accountId) is @Nullable
        return this.accounts.get(accountId).getAccountState();
                                           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url65a69497a4_sweider_BankSystem_JavaLab8_tgz-pJ8-banksystem_lab4_LauncherJ8/src/banksystem/lab4/core/broker/Broker.java:60: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return this.accounts.get(id);
        ^
    (see http://t.uber.com/nullaway )
../nullgtn/url65a69497a4_sweider_BankSystem_JavaLab8_tgz-pJ8-banksystem_lab4_LauncherJ8/src/banksystem/lab4/core/bank/Bank.java:36: error: [NullAway] returning @Nullable expression from method with @NonNull return type
            return null;
            ^
    (see http://t.uber.com/nullaway )
../nullgtn/url65a69497a4_sweider_BankSystem_JavaLab8_tgz-pJ8-banksystem_lab4_LauncherJ8/src/banksystem/lab4/core/bank/Bank.java:48: error: [NullAway] parameter newAccount is @NonNull, but parameter in superclass method banksystem.lab4.core.bank.IBank.addNewAccount(banksystem.lab4.core.account.Account) is @Nullable
    public synchronized void addNewAccount(Account newAccount) {
                                                   ^
    (see http://t.uber.com/nullaway )
../nullgtn/url65a69497a4_sweider_BankSystem_JavaLab8_tgz-pJ8-banksystem_lab4_LauncherJ8/src/banksystem/lab4/core/account/CashierAccess.java:27: error: [NullAway] parameter moneyAmount is @NonNull, but parameter in superclass method banksystem.lab4.core.account.ICashierAccess.reserve(banksystem.lab4.core.moneyamount.MoneyAmount) is @Nullable
    public void reserve(MoneyAmount moneyAmount) {
                                    ^
    (see http://t.uber.com/nullaway )
../nullgtn/url65a69497a4_sweider_BankSystem_JavaLab8_tgz-pJ8-banksystem_lab4_LauncherJ8/src/banksystem/lab4/core/account/TransactionAccess.java:22: error: [NullAway] parameter moneyToDeposite is @NonNull, but parameter in superclass method banksystem.lab4.core.account.ITransactionAccess.deposite(banksystem.lab4.core.moneyamount.MoneyAmount) is @Nullable
    public void deposite(MoneyAmount moneyToDeposite) {
                                     ^
    (see http://t.uber.com/nullaway )
../nullgtn/url65a69497a4_sweider_BankSystem_JavaLab8_tgz-pJ8-banksystem_lab4_LauncherJ8/src/banksystem/lab4/core/account/TransactionAccess.java:27: error: [NullAway] parameter moneyToWithdraw is @NonNull, but parameter in superclass method banksystem.lab4.core.account.ITransactionAccess.withdraw(banksystem.lab4.core.moneyamount.MoneyAmount) is @Nullable
    public void withdraw(MoneyAmount moneyToWithdraw) {
                                     ^
    (see http://t.uber.com/nullaway )
../nullgtn/url65a69497a4_sweider_BankSystem_JavaLab8_tgz-pJ8-banksystem_lab4_LauncherJ8/src/banksystem/lab4/cashier/Cashier.java:63: error: [NullAway] initializer method does not guarantee @NonNull fields currentAccountProxy (line 57), currentAccount (line 59) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    Cashier(IBank bank, TransactionQueue transactionQueue) {
    ^
    (see http://t.uber.com/nullaway )
../nullgtn/url65a69497a4_sweider_BankSystem_JavaLab8_tgz-pJ8-banksystem_lab4_LauncherJ8/src/banksystem/lab4/cashier/Cashier.java:126: error: [NullAway] returning @Nullable expression from method with @NonNull return type
            return null;
            ^
    (see http://t.uber.com/nullaway )
../nullgtn/url65a69497a4_sweider_BankSystem_JavaLab8_tgz-pJ8-banksystem_lab4_LauncherJ8/src/banksystem/lab4/cashier/Cashier.java:167: error: [NullAway] assigning @Nullable expression to @NonNull field
                this.currentAccount = null;
                                    ^
    (see http://t.uber.com/nullaway )
15 errors
